--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "author": "hychoi318@gmail.com",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^3.0.2",
     "gulp": "^5.0.0",
-    "gulp-ejs": "^5.1.0"
+    "gulp-ejs": "^5.1.0",
+    "gulp-sass": "^5.1.0",
+    "sass": "^1.75.0"
   },
   "dependencies": {
+    "del": "^6.1.1",
     "gulp-babel": "^8.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-uglify": "^3.0.2"
