--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "del": "^6.1.1",
     "gulp": "^4.0.2",
     "gulp-ejs": "^5.1.0",
+    "gulp-htmlsplit": "^1.1.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-inline-source": "^4.0.0",
+    "gulp-line-ending-corrector": "^1.0.3",
     "gulp-sass": "^5.1.0",
     "sass": "^1.75.0",
     "vinyl-source-stream": "^2.0.0"
